package damath_zero;

service DamathZero {
  rpc predict(GameState) returns (GameAction) {}
}

message GameState {
  required string name = 1;
}

message GameAction {
  required string message = 1;
}